--- a/core/components/githubdocs/docs/changelog.txt
+++ b/core/components/githubdocs/docs/changelog.txt
@@ -1,5 +1,9 @@
 Changelog for gitHubDocs.
 
+gitHubDocs 1.0.0-pl (November 27, 2018)
+====================================
+- Initial release.
+
 gitHubDocs 1.0.0-beta (November 15, 2018)
 ====================================
 - Initial beta.
